// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "08835b400075f7096067278becae66ea7fd422196bf94030b0e3ef6026eb826f",
  "floor": 10,
  "status": "won",
  "turn": 970,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "1eca0d5aa472e6a525b992a783520a72c3d8b54dd723a4a5f09fc7ff51a11bcf",
  "floor": 6,
  "status": "returned",
  "turn": 498,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "d29758700a438cdd14bc8fad99bdd6a6b3a20225a25f777bf65bceada884d423",
  "floor": 6,
  "status": "returned",
  "turn": 490,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "4f6641a167c022c9940fcaeccac19b9ee36a060cb2355649ea7fb91d6acbc4e0",
  "floor": 10,
  "status": "won",
  "turn": 1155,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "42ea362b9a989d27a70e82396e39d8bb0c785bc25e03d790a37d87a1f24c872c",
  "floor": 6,
  "status": "returned",
  "turn": 499,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "491a64eee232ad2e488a6d89e02d335c6ba49aa34667879e656dfadeb166cfda",
  "floor": 10,
  "status": "won",
  "turn": 947,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "09640779430413b4645da430bc0adfdf5b8ff34d674bb3497c782708a1b3808b",
  "floor": 6,
  "status": "returned",
  "turn": 597,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "9732611c9e9bf8f391f1fe051f85dec2c272d83c712abbf7f9d237cfae45e41b",
  "floor": 10,
  "status": "won",
  "turn": 961,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "ff920a93b1c990fca3a05bf0a17ed38fde011197867e6bcbe71876d7708465a1",
  "floor": 6,
  "status": "returned",
  "turn": 498,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "21eed6d3632a88d31eeeffaf83ce0c2893d5ceacb87a0e5c4d9717dac834e81d",
  "floor": 6,
  "status": "returned",
  "turn": 490,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "61a063c07b180c23c48be0e803fda5e0390a6b0c3b96a7e117292590dff92ca3",
  "floor": 10,
  "status": "won",
  "turn": 1145,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "90b764ece2c8fdd1c36613df970a79674eca3ecb36111bd8147a1b2c857044d1",
  "floor": 6,
  "status": "returned",
  "turn": 499,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "ef54a27bb7f764f2f198f78c1ed2aaf67b80f73c95e2a58aa2cb06a7659b8b9e",
  "floor": 10,
  "status": "won",
  "turn": 942,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "8703a9de3f95bf1ac42196756514e3016cd8a9158f050245becbf9e32071b8c4",
  "floor": 6,
  "status": "returned",
  "turn": 597,
}
`;
